--- a/src/main/resources/templates/admin/_fragments.html
+++ b/src/main/resources/templates/admin/_fragments.html
@@ -86,7 +86,11 @@
             </div>
         </div>
         <div class="ui inverted section divider"></div>
-        <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright &copy; 2021.9.10 by Newbie Zry</p>
+        <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright © 2021-2022 听宇轩. All rights reserved.</p>
+        <div>
+            <p class="m-text-thin m-text-spaced m-opacity-tiny"><a href="http://icp.chinaz.com/home/info?host=xiongsihao.com">赣ICP备20000310号</a></p>
+            <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=2021028184" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="http://www.beian.gov.cn/img/ico.ico" style="float:left;"><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#ff1c04;">豫ICP备 2021028184号</p></a>
+        </div>
     </div>
 
 </footer>
