--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <!--content 博客列表的中间内容 -->
-                <div class="m-border-radius">
+                <div id="pjax-container" data-pjax="data" class="m-border-radius">
                     <div class="ui padded segment  m-card" th:each="blog : ${pageInfo.list}">
                         <div class="five wide column m-margin-bottom">
                             <a href="#" th:href="@{/blog/{id}(id=${blog.id})}">
@@ -110,15 +110,15 @@
                     </div>
                 </div>
 
-                <!-- footer-->
+                <!-- pageInfo-->
                 <div class="ui bottom attached segment" th:if="${pageInfo.total}>1">
                     <div class="ui middle aligned two column grid">
                         <div class="column">
-                            <a href="#" th:href="@{/(pageNum=${pageInfo.pageNum-1})}"  th:unless="${pageInfo.isIsFirstPage}"
+                            <a  href="#" th:href="@{/(pageNum=${pageInfo.pageNum-1})}"  th:unless="${pageInfo.isIsFirstPage}"
                                class="ui blue  button ">上一页</a>
                         </div>
                         <div class="right aligned column " >
-                            <a href="#" th:href="@{/(pageNum=${pageInfo.pageNum+1})}"
+                            <a   href="#" th:href="@{/(pageNum=${pageInfo.pageNum+1})}"
                                th:unless="${pageInfo.isLastPage}" class="ui blue  button ">下一页</a>
                         </div>
                     </div>
@@ -127,8 +127,7 @@
     </div>
 
 </div>
-<br>
-<br>
+
 <!--底部footer-->
 <footer th:replace="_fragments::footer" class="ui inverted vertical segment m-padded-tb-massive">
     <!--    居中-->
@@ -175,7 +174,6 @@
 <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
 <!--/*/</th:block>/*/-->
 <script type="text/javascript">
-
     $("#menu_toggle").click(function () {
         $(".nav_item").toggleClass('m-mobile-hide');
         $(".nav_search").toggleClass('no');
