--- a/src/main/resources/static/lib/editormd/lib/codemirror/lib/codemirror.css
+++ b/src/main/resources/static/lib/editormd/lib/codemirror/lib/codemirror.css
@@ -92,7 +92,7 @@
   100% { background: #7e7; }
 }
 
-/* Can style cursor different in overwrite (non-insert) mode */
+/* Can style cursor different in overwrite (non-insertBlogTags) mode */
 div.CodeMirror-overwrite div.CodeMirror-cursor {}
 
 .cm-tab { display: inline-block; text-decoration: inherit; }
