--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -193,3 +193,9 @@ p code {
     overflow-y: auto;
     height: 780px;
 }
+
+/*回复按钮样式*/
+.reply{
+    margin-left: 5px!important;
+    padding: 4px 5px!important;
+}
